# ai-demo-app

./: .env.example  .gitignore  README.md  checkpoints.sqlite  langgraph.json  main.py  package-lock.json  pyproject.toml
.chroma/: chroma.sqlite3
agents/code-interpreter-and-csv-agent/: main.py  tool_calling.py
agents/code-interpreter-and-csv-agent/csv_files/: local_data.csv
agents/rag/: ingestion.py  main.py  retrieve.py
agents/rag-agent/: ingestion.py  main.py  retrieve.py
agents/rag/docs/: blog.txt
agents/react-agent/: main.py
chroma_db/: chroma.sqlite3
chroma_db_blog/: chroma.sqlite3
docs/: agentic_ai_presentation.md
graphs/async/: main.py
graphs/async_graph/: main.py
graphs/conditional_async/: main.py
graphs/email_agent/: main.py  state.py
graphs/hotel_customer_service/: main.py  state.py
graphs/human-in-the-loop-and-memory/: main.py
graphs/rag/: ingestion.py  main.py
graphs/rag/graph/: consts.py  graph.py
graphs/rag/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
graphs/rag/graph/chains/tests/: test_chains.py
graphs/rag/graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
graphs/react/: main.py  nodes.py  react.py  state.py
graphs/reflection/: chains.py  main.py
graphs/reflexion/: chains.py  main.py  schemas.py  tool_executor.py
graphs/router/: main.py
ui/: package-lock.json  package.json
ui/src/app/: Mailer.tsx  greeter.tsx  layout.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
