[tool.poetry]
name = "ai-demo-app"
version = "0.1.0"
description = ""
authors = ["Fawad"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.10"
langchain-openai = "^0.2.11"
langchain-community = "^0.3.10"
langchainhub = "^0.1.21"
black = "^24.10.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pinecone-client = "^5.0.1"
langchain-pinecone = "^0.2.0"
pypdf = "^5.1.0"
faiss-cpu = "^1.9.0.post1"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.41.1"
streamlit-chat = "^0.1.1"
langchain-experimental = "^0.3.3"
qrcode = "^8.0"
tabulate = "^0.9.0"
langgraph = "^0.2.60"
isort = "^5.13.2"
pytest = "^8.3.4"
tavily-python = "^0.5.0"
langchain-chroma = "^0.1.4"
langgraph-checkpoint-sqlite = "^2.0.1"
langgraph-cli = "^0.1.65"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
